--- a/.env.dist
+++ b/.env.dist
@@ -2,7 +2,7 @@
 # Copy this file to .env file for development, create environment variables when deploying to production
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
-PORT=80
+SOCKET_PORT=80
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
